[package]
name = "neon-keyboard"
version = "0.1.0"
authors = ["Scorpion197"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.3"
lazy_static = "1.1.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
